# SocksProxy

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: SocksProxy.qrc  SocksProxy.rc
src/: Socks4Connection.cpp  Socks4Connection.h  Socks5Connection.cpp  Socks5Connection.h  SocksConnection.cpp  SocksConnection.h  SocksServer.cpp  SocksServer.h  SocksSession.cpp  main.cpp
src/decorators/: QIODeviceDecorator.cpp  QIODeviceDecorator.h  QTcpSocketDecorator.cpp  QTcpSocketDecorator.h  ThrottlingDecorator.cpp  ThrottlingDecorator.h
src/protocol/: Socks4ReplyMessage.h  Socks4RequestMessage.cpp  Socks4RequestMessage.h  Socks5GreetingMessage.cpp  Socks5GreetingMessage.h  Socks5ReplyMessage.h  Socks5UDPRequestMessage.h
src/states/: InitialState.cpp  InitialState.h  Socks4ConnectState.cpp  Socks4ConnectState.h  Socks4ConnectedState.cpp  Socks4InitialState.cpp  Socks5AuthState.cpp  Socks5AuthenticatedState.cpp  Socks5ConnectState.cpp  Socks5ConnectState.h  Socks5ConnectedState.cpp  Socks5UDPAssociatedState.h  SocksState.h
translation/: lang_de.ts
